--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -45,7 +45,7 @@
             "url": "/partners"
           },
           {
-            "name": "Contact",
+            "name": "Informations pratiques",
             "component": "contact",
             "enabled": "true",
             "url": "/contact"
@@ -142,7 +142,7 @@
         "submission-address": {
           "title": "Adresse des soumissions",
           "description": "Poster et démonstrations interactives doivent être envoyées à l’un des deux responsables à savoir Pamela Delgado ou Valérie Schürch Todeschini. Les contributions académiques ainsi que les articles en lien avec un développement industriel font l’objet d’une soumission dédiée : ",
-          "submission-site": "https://ai-days25-hes-so.hotcrp.com",
+          "submission-site": "https://ai-days25.hotcrp.com",
           "mail-1": "valerie.schurchtodeschini@he-arc.ch",
           "mail-2": "pamela.delgado@hevs.ch"
         },
@@ -229,7 +229,7 @@
             "role": "Membre du comité",
             "icon": "Groups3Rounded",
             "members": [
-              "Jean Hennebert, lead CSIA-PME, HES-SO (ex-officio)"
+              "Jean Hennebert, lead CSIA-PME, HEIA-FR, HES-SO (ex-officio)"
             ]
           }
         ]
@@ -287,17 +287,17 @@
         "title-27": "Journée des Workshops – 27 Janvier",
         "venue-27": "Pathé Balexert",
         "description-title": "Description",
-        "time-title": "Temps",
+        "time-title": "Horaire",
         "equipment-title": "Equipements",
         "activities-title": "Activitiés",
         "topics-title": "Sujets",
         "workshops": [
           {
-            "title": "Workshop 1 : INFRA",
+            "title": "Workshop 1 : Workshop on Compute Infrastructures for IA applications in the wild",
             "description": "Avec l'avènement des chatbots, des grands modèles de langage (LLMs) et d'autres technologies d'IA générative, ainsi que d'autres progrès dans le domaine de l'IA, il y a une explosion de la demande en puissance de calcul. L'IA n'est plus simplement de l'informatique, c'est une science computationnelle. En tant que telle, elle ne peut plus se réaliser avec des équipements auto-gérés et occasionnels. Des infrastructures de calcul plus avancées sont nécessaires pour répondre aux besoins des utilisateurs en termes de puissance de calcul, de capacité de RAM GPU, d'environnements logiciels et de sécurité, tout en assurant une utilisation efficace des ressources de plus en plus coûteuses. L'objectif de ce Workshop est de réunir des personnes responsables des infrastructures de calcul (sur site, cloud ou hybride) destinées à prendre en charge les charges de travail IA (à la fois l'entraînement et l'inférence) dans le but de créer une communauté en Suisse.",
             "schedule": {
-              "time": "9h00 à 17h",
-              "equipment": "Équipement attendu : à confirmer."
+              "time": "de 9h à 17h (à confirmer)",
+              "equipment": "Aucun équipement requis"
             },
             "activities": [
               "Ce Workshop comprendra des présentations principales et invitées, mais se concentrera surtout sur des présentations courtes (~10-15 min) au cours desquelles les participants partageront des sujets tels que les technologies en test ou en utilisation, la répartition des charges de travail, les défis spécifiques ou des projets visant à améliorer l'infrastructure IA.",
