--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -2,7 +2,7 @@
   "years": [
     {
       "year": "2025",
-      "title": "AI Days 2025 by HES-SO",
+      "title": "AI Days@HES-SO 2025",
       "event_dates": "27-29 janvier 2025",
       "location": "Genève et Lausanne",
       "organizer": "Centre suisse d’intelligence artificielle pour les PMEs (CSIA-PME)",
@@ -67,7 +67,7 @@
         ]
       },
       "home": {
-        "title": "AI Days 2025",
+        "title": "AI Days@HES-SO 2025",
         "subtitle": "Du 27 au 29 janvier 2025",
         "description": {
           "par1": "L’édition 2025 des AI-Days aura lieu du 27 au 29 janvier 2025, à Genève (27 et 28) et Lausanne (29 janvier). Les AI-days de la HES-SO sont organisés par le Centre suisse d’intelligence artificielle pour les PMEs (CSIA-PMEs). Le but de l’événement est d’offrir un forum pour discuter de l’emploi en pratique des nouvelles technologies IA dans le tissu économique.",
@@ -89,10 +89,11 @@
           "description": "Le Centre Suisse d’Intelligence Artificielle pour les PME (CSIA-PME) a été fondé en 2023 par les domaines d’Ingénierie et d’Architecture des Hautes-Ecoles Suisse (HES-SO). Il a pour mission d’accélérer l’adoption de l’intelligence artificielle (IA) dans la transition numérique des PME suisses en mettant en lien les chercheurs et développeurs des diverses HES avec les entreprises, futures utilisatrices."
         },
         "event-description": {
-          "title": "Les AI Days 2025",
+          "title": "Les AI Days@HES-SO 2025",
           "paragraph1": "Dans ce cadre, le centre organise chaque année une série de conférences et présentations : les AI days. Cette manifestation est publique et ouverte à tous. Toutefois, la cible privilégiée reste les entrepreneurs et managers des PME de Suisse Romande et a pour but de présenter les avantages que pourraient procurer l’adoption de l’IA dans leur domaine d’activité.",
-          "paragraph2": "Vu le succès des éditions précédentes, les AI days’25 auront lieu sur trois jours consécutifs, à savoir les 27 et 28 janvier 2025 à Genève et le 29 janvier à Lausanne. Cet événement proposera des activités variées sous forme de sessions parallèles incluant des tables rondes, des Workshops, des posters et des sessions de démonstrations, du speed-dating networking, ainsi que des présentations académiques de développements récents, des innovations industrielles en lien avec l’IA, et des collaborations fructueuses entre les partenaires académiques et industriels.",
-          "paragraph3": "Cette année, les contributions académiques seront soumises à une révision par les pairs et feront l’objet d’une publication. Les sujets retenus (mais non limitant) sont en lien avec l’implication de l’Intelligence Artificielle (IA) dans les domaines suivants:"
+          "paragraph2": "Vu le succès des éditions précédentes, les AI days’25 auront lieu sur trois jours consécutifs, à savoir les 27 et 28 janvier 2025 à Genève (Cinéma Pathé Balexert) et le 29 janvier à Lausanne (Ecole Hotelière). Cet événement proposera des activités variées sous forme de sessions parallèles incluant:",
+          "paragraph3": "<ul><li>des tables rondes, des workshops, des posters et des sessions de démonstrations et de speed-dating networking</li><li>des présentations académiques de développements récents, des innovations industrielles en lien avec l’IA, et des collaborations fructueuses entre les partenaires académiques et industriels</li><li>des résultats novateurs en recherche appliquée. Cette année pour la première fois, les contributions académiques seront soumises à une révision par les pairs et les contributions sélectionnées feront l’objet d’une publication avec l'institution CEUR (<a href=\"https://ceur-ws.org/\">https://ceur-ws.org/</a>).</li></ul>Des contributions sont recherchées dans les domaines suivants de l'Intelligence Artificielle (entre autres) :"
+
         },
         "topics": [
           "Durabilité",
@@ -101,26 +102,26 @@
           "AI tools et MLOps",
           "Edge et Infrastructure",
           "Responsible AI",
-          "Privacy et la sécurité"
+          "Privacy et sécurité"
         ],
         "submission-types": {
           "title": "Catégories de soumission et lignes directrices",
           "types": [
             {
-              "title": "Court article académique",
-              "description": "Un article académique de maximum 5 pages \"standard\" (résumé de 500 caractères au maximum + références illimitées). La sélection se fera sur la base de la nouveauté et de l'adéquation avec le thème de la conférence."
+              "title": "Courts articles académiques",
+              "description": "Un article académique de maximum 5 pages \"standard\" (résumé de 500 caractères au maximum + références illimitées). La sélection se fera sur la base de la nouveauté et de l'adéquation avec le thème de la conférence. Les soumissions se font via le site suivant <a href=\"https://ai-days25.hotcrp.com\">https://ai-days25.hotcrp.com</a> ainsi que sur la base de ce <a href=\"https://www.overleaf.com/6864366429jwskwysfdfgy#409ae6\">template overleaf</a>. Les papiers retenus seront publiés dans des actes de la conférence, en collaboration avec l'institution CEUR (<a href=\"https://ceur-ws.org/\">https://ceur-ws.org/</a>)"
             },
             {
               "title": "Article en lien avec un développement industriel",
-              "description": "Une page de présentation d'une innovation ou d'un projet en lien avec l'IA dans une entreprise, accompagnée d'une page de présentation du contexte industriel et/ou de l'entreprise. Ces présentations ne feront pas l'objet de publication."
+              "description": "Une page de présentation d'une innovation ou d'un projet en lien avec l'IA dans une entreprise, accompagnée d'une page de présentation du contexte industriel et/ou de l'entreprise. Ces présentations ne feront pas l'objet de publication. Les soumissions se font via le site suivant <a href=\"https://ai-days25.hotcrp.com\">https://ai-days25.hotcrp.com</a> ainsi que sur la base de ce <a href=\"https://www.overleaf.com/6864366429jwskwysfdfgy#409ae6\">template overleaf</a>."
             },
             {
               "title": "Poster",
-              "description": "Un résumé de 300 mots au maximum accompagné d'un poster taille A0 (orientation portrait). Le poster devra contenir un titre, le nom du/des auteur(s), la méthodologie utilisée, les résultats obtenus et les conclusions. Veuillez noter que vous devrez imprimer, apporter et accrocher votre poster vous-même. Seul le résumé fera l’objet de publications."
+              "description": "Un résumé de 300 mots au maximum accompagné d'un poster taille A0 (orientation portrait). Le poster devra contenir un titre, le nom du/des auteur(s), la méthodologie utilisée, les résultats obtenus et les conclusions. Veuillez noter que vous devrez imprimer, apporter et accrocher votre poster vous-même. Seul le résumé fera l’objet de publications. Les soumissions posters doivent être soumis <a href=\"mailto:valerie.schurchtodeschini@he-arc.ch,pamela.delgado@hevs.ch\">par email aux responsables du programme technique</a>."
             },
             {
               "title": "Démonstration interactive",
-              "description": "Une démonstration interactive accompagnée d'une page de présentation et/ou de contexte. Le document d'accompagnement devra contenir un titre, le nom du/des auteur(s), la méthodologie utilisée, les résultats obtenus et les conclusions. (1 page de présentation et/ou du contexte + références illimitées). Veuillez noter que vous êtes responsable de votre démonstration que aucun matériel ne sera fourni."
+              "description": "Une démonstration interactive accompagnée d'une page de présentation et/ou de contexte. Le document d'accompagnement devra contenir un titre, le nom du/des auteur(s), la méthodologie utilisée, les résultats obtenus et les conclusions. (1 page de présentation et/ou du contexte + références illimitées). Veuillez noter que vous êtes responsable de votre démonstration que aucun matériel ne sera fourni. Le document doit être soumis <a href=\"mailto:valerie.schurchtodeschini@he-arc.ch,pamela.delgado@hevs.ch\">par email aux responsables du programme technique</a>."
             }
           ]
         },
@@ -137,7 +138,7 @@
           "paragraph1": "Les auteurs doivent soumettre des contributions originales qui ne sont pas considérées comme publications dans d'autres conférences, Workshops ou revues (les contextes non évalués par des pairs comme arXiv, sont autorisés). Toutes les sources doivent être citées et clairement identifiées, y compris les publications précédentes du / des même(s) auteur(s).",
           "paragraph2": "Les évaluations des soumissions académiques se font en double aveugle. Les auteurs doivent s'efforcer de rendre leurs articles anonymes et non identifiable explicitement ou implicitement. Dans le cas d'articles industriels, la divulgation de l'entreprise/du produit est acceptable, mais la soumission ne doit pas révéler directement le nom des auteurs.",
           "paragraph3": "Veuillez prendre note que les articles académiques devront être rédigés en anglais.",
-          "paragraph4": "Tant les contributions académiques que industrielles doivent utiliser le format Latex proposé ici Les articles doivent inclure comme sous-titre les mentions “académiques” ou “industriel”. Les auteurs ne doivent soumettre qu’un seul fichier PDF, formaté pour du papier A4 et dont la taille ne dépasse pas 10 Mo. Tout article soumis ne respectant pas les exigences en matière de longueur, de type de fichier ou de formatage sera rejeté sans examen. "
+          "paragraph4": "Tant les contributions académiques que industrielles doivent utiliser le format Latex proposé <a href=\"https://www.overleaf.com/6864366429jwskwysfdfgy#409ae6\">ici</a>. Les articles doivent inclure comme sous-titre les mentions “académiques” ou “industriel”. Les auteurs ne doivent soumettre qu’un seul fichier PDF, formaté pour du papier A4 et dont la taille ne dépasse pas 10 Mo. Tout article soumis ne respectant pas les exigences en matière de longueur, de type de fichier ou de formatage sera rejeté sans examen. "
         },
         "submission-address": {
           "title": "Adresse des soumissions",
@@ -148,7 +149,7 @@
         },
         "questions": {
           "title": "Questions?",
-          "description": "Pour toutes questions éventuelles, n’hésitez pas à prendre contact par courriel avec l’une des deux responsables : Pamela Delgado et Valérie Schürch Todeschini."
+          "description": "Pour toutes questions éventuelles, n’hésitez pas à prendre contact par courriel avec l’une des deux responsables du programme technique : Pamela Delgado (pamela.delgado [at] hevs.ch) et Valérie Schürch Todeschini (valerie.schurchtodeschini [at] he-arc.ch)."
         },
         "committee": {
           "title": "Comité du programme technique",
@@ -160,14 +161,15 @@
           "s6": "Torsten Braun, University of Bern, Switzerland",
           "s7": "Andrea Guerrieri, EPFL, Switzerland",
           "s8": "Matthew Vowels, University of Lausanne, Switzerland",
-          "s9": " Silvan Zahno, HES-SO Valais/Wallis",
+          "s9": " Silvan Zahno, HES-SO Valais/Wallis, Switzerland",
           "s10": "Mara Graziani, IBM Research, Switzerland",
           "s11": "Adrian Holzer, University of Neuchâtel, Switzerland",
-          "s12": "Andreas Fischer, HES-SO Fribourg, Switzerland"
+          "s12": "Andreas Fischer, HES-SO Fribourg, Switzerland",
+          "s13": "Ricardo Chavarriaga, ZHAW, Switzerland"
         }
       },
       "contact": {
-        "title": "Contact",
+        "title": "Informations pratiques",
         "venue-title": "Lieux des événements",
         "venue-cfa": "Télécharger PDF",
         "venue-google-maps": "Ouvrir Google Maps",
