--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -346,10 +346,10 @@
             ]
           },
           {
-            "title": "Workshop 4 : MLOps",
+            "title": "Workshop 3b : Machine Learning Operations - MLOps",
             "description": "Dans ce Workshop, les participant·es exploreront les aspects de la gestion des données dans le cadre RAG (Generation Augmentée par la Recherche) appliqué aux grands modèles de langage (LLM). L'objectif principal est de transformer une expérience de Machine Learning fournie dans un Jupyter Notebook en une application adaptée pour la production en intégrant un pipeline DVC pour une gestion efficace des données. Cet atelier vise à fournir aux participant·es les compétences techniques nécessaires pour gérer le cycle de vie des données des modèles de Machine Learning, promouvoir la collaboration dans les équipes et automatiser les processus opérationnels.",
             "schedule": {
-              "time": "9h-12h30 et 13h30-17h",
+              "time": "13h-16h",
               "equipment": "Ordinateur portable personnel avec WSL2 / Linux Ubuntu installé et prêt à l'emploi."
             },
             "activities": [
