Added more TPC names

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -164,7 +164,15 @@
           "s10": "Mara Graziani, IBM Research, Switzerland",
           "s11": "Adrian Holzer, University of Neuchâtel, Switzerland",
           "s12": "Andreas Fischer, HES-SO Fribourg, Switzerland",
-          "s13": "Ricardo Chavarriaga, ZHAW, Switzerland"
+          "s13": "Ricardo Chavarriaga, ZHAW, Switzerland",
+          "s14": "Snezana Nektarijevic, SDSC, Switzerland",
+          "s15": "Bastian Grossenbacher, UNIFR, Switzerland",
+          "s16": "Corrine Fredouille, Université d'Avignon, France",
+          "s17": "Diego Collarana, Fraunhofer Institute, Germany",
+          "s18": "Stéphane Galland, Université de Technologie de Belfort Montbéliard, France",
+          "s19": "Alina Matei, University of Neuchâtel, Switzerland",
+          "s20": "Didier Beloin St Pierre, EMPA, Switzerland",
+          "s21": "Martin Melchior, FHNW, Switzerland"
         }
       },
       "contact": {
